--- a/Proyecto Grupo 6/Views/Store/index.cshtml
+++ b/Proyecto Grupo 6/Views/Store/index.cshtml
@@ -1,7 +1,6 @@
-<html>
-
-<H1> ESTE ES EL INDEX QUE EL integrante el grupo va a modificar (el home practicamente)</H1>
 
 
+<H1> ESTE ES EL INDEX QUE EL integrante el grupo va a modificar (el home practicamente</H1>
 
-</html>
+
+
