--- a/Proyecto Grupo 6/WebItems/css/style.css
+++ b/Proyecto Grupo 6/WebItems/css/style.css
@@ -173,12 +173,12 @@ ol {
 
 .site-btn {
 	font-size: 14px;
-	color: #ffffff;
+	color: white;
 	font-weight: 800;
 	text-transform: uppercase;
 	display: inline-block;
 	padding: 13px 30px 12px;
-	background: #7fad39;
+	background: darkblue;
 	border: none;
 }
 
@@ -524,7 +524,7 @@ ol {
 .header__cart ul li a span {
 	height: 13px;
 	width: 13px;
-	background: #7fad39;
+	background: darkblue;
 	font-size: 10px;
 	color: #ffffff;
 	line-height: 13px;
@@ -2758,7 +2758,7 @@ ol {
 
 .contact__widget span {
 	font-size: 36px;
-	color: #7fad39;
+	color: darkblue;
 }
 
 .contact__widget h4 {
@@ -2797,7 +2797,7 @@ ol {
 
 .map .map-inside i {
 	font-size: 48px;
-	color: #7fad39;
+	color: darkblue;
 	position: absolute;
 	bottom: -75px;
 	left: 50%;
