--- a/Proyecto Grupo 6/Views/Shared/_Layout.cshtml
+++ b/Proyecto Grupo 6/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
                 <!-- Aqui se agregan los enlace al controlador y del controlador a las vistas modo escritorio -->
                 <li>@Html.ActionLink("Inicio", "index", "Store", new { area = "" }, new { @class = "nav-link" })</li>
                 <li>@Html.ActionLink("Contacto", "contact", "Store", new { area = "" }, new { @class = "nav-link" })</li>
-
+                <li>@Html.ActionLink("Tienda", "shop", "Store", new { area = "" }, new { @class = "nav-link" })</li>
             </ul>
         </nav>
         <div id="mobile-menu-wrap"></div>
