--- a/Proyecto Grupo 6/Views/Shared/_Layout.cshtml
+++ b/Proyecto Grupo 6/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
     <div class="humberger__menu__overlay"></div>
     <div class="humberger__menu__wrapper">
         <div class="humberger__menu__logo">
-            <a href="#"><img src="img/logo.png" alt=""></a>
+            <a href="#">@*<img src="img/logo.png" alt="">*@</a>
         </div>
         <div class="humberger__menu__cart">
             <ul>
@@ -46,7 +46,7 @@
             <div class="header__cart__price">Total: <span>$150.00</span></div>
         </div>
         <div class="humberger__menu__widget">
-         
+
             <div class="header__top__right__auth">
                 <a href="#"><i class="fa fa-user"></i> Login</a>
             </div>
@@ -99,7 +99,7 @@
                                 <a href="#"><i class="fa fa-linkedin"></i></a>
                                 <a href="#"><i class="fa fa-pinterest-p"></i></a>
                             </div>
-                        
+
                             <div class="header__top__right__auth">
                                 <a href="#"><i class="fa fa-user"></i> Iniciar Sesión</a>
                             </div>
@@ -112,7 +112,7 @@
             <div class="row">
                 <div class="col-lg-3">
                     <div class="header__logo">
-                        <a href="./index.html"><img src="img/logo.png" alt=""></a>
+                        <a href="./index.html">@*<img src="img/logo.png" alt="">*@</a>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -158,7 +158,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer__about__logo">
-                            <a href="./index.html"><img src="img/logo.png" alt=""></a>
+                            <a href="./index.html">@*<img src="img/logo.png" alt="">*@</a>
                         </div>
                         <ul>
                             <li>Dirección: San José Costa Rica</li>
@@ -171,14 +171,14 @@
                     <div class="footer__widget">
                         <h6>Links interesantes</h6>
                         <ul>
-                            
-                          <li>@Html.ActionLink("Contacto", "contact", "Store", new { area = "" }, new { @class = "nav-link" })</li>
-                            
+
+                            <li>@Html.ActionLink("Contacto", "contact", "Store", new { area = "" }, new { @class = "nav-link" })</li>
+
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-12">
-                    <div class="footer__widget">                      
+                    <div class="footer__widget">
                         <div class="footer__widget__social">
                             <a href="#"><i class="fa fa-facebook"></i></a>
                             <a href="#"><i class="fa fa-instagram"></i></a>
@@ -199,7 +199,7 @@
                                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                             </p>
                         </div>
-                        <div class="footer__copyright__payment"><img src="img/payment-item.png" alt=""></div>
+                        <div class="footer__copyright__payment">@*<img src="img/payment-item.png" alt="">*@</div>
                     </div>
                 </div>
             </div>
@@ -207,15 +207,14 @@
     </footer>
     <!-- Footer Section End -->
     <!-- Js Plugins -->
-    
-    <script src="~/WebItems/js/owl.carousel.min.js"></script>
-    <script src="~/WebItems/js/bootstrap.min.js"></script>
     <script src="~/WebItems/js/jquery-3.3.1.min.js"></script>
-    <script src="~/WebItems/js/jquery-ui.min.js"></script>
+    <script src="~/WebItems/js/bootstrap.min.js"></script>
     <script src="~/WebItems/js/jquery.nice-select.min.js"></script>
+    <script src="~/WebItems/js/jquery-ui.min.js"></script>
     <script src="~/WebItems/js/jquery.slicknav.js"></script>
-    <script src="~/WebItems/js/main.js"></script>
     <script src="~/WebItems/js/mixitup.min.js"></script>
+    <script src="~/WebItems/js/owl.carousel.min.js"></script>
+    <script src="~/WebItems/js/main.js"></script>
 
 </body>
 
