--- a/Proyecto Grupo 6/WebItems/css/style.css
+++ b/Proyecto Grupo 6/WebItems/css/style.css
@@ -173,12 +173,12 @@ ol {
 
 .site-btn {
 	font-size: 14px;
-	color: white;
+	color: #ffffff;
 	font-weight: 800;
 	text-transform: uppercase;
 	display: inline-block;
 	padding: 13px 30px 12px;
-	background: darkblue;
+	background: #7fad39;
 	border: none;
 }
 
