--- a/Proyecto Grupo 6/Views/Store/shopingCart.cshtml
+++ b/Proyecto Grupo 6/Views/Store/shopingCart.cshtml
@@ -128,7 +128,8 @@
                         <li>Subtotal <span>$11300.00</span></li>
                         <li>Total <span>$11300.00</span></li>
                     </ul>
-                    <a href="#" class="primary-btn">Ir al checkout</a>
+                    <a href="@Url.Action("shopDetails", "Store")" class="primary-btn">Ir al checkout</a>
+
                 </div>
             </div>
         </div>
