--- a/Proyecto Grupo 6/Views/Store/IniciarSesion.cshtml
+++ b/Proyecto Grupo 6/Views/Store/IniciarSesion.cshtml
@@ -1,23 +1,24 @@
-﻿@{
+﻿@model Proyecto_Grupo_6.Entities.UserEnt
+@{
     ViewBag.Title = "Iniciar Sesion";
     Layout = "~/Views/Shared/_Layout - login.cshtml";
 }
 
-@using (Html.BeginForm("RegistrarUsuario", "Home", FormMethod.Post))
+@using (Html.BeginForm("IniciarSesion", "User", FormMethod.Post))
 {
     <div class="row h-100 align-items-center justify-content-center" style="min-height: 100vh;">
         <div class="col-12 col-sm-8 col-md-6 col-lg-5 col-xl-4">
             <div class="bg-light rounded p-4 p-sm-5 my-4 mx-3">
                 <div class="d-flex align-items-center justify-content-between mb-3">
                     <h3 style="color: forestgreen !important" class="text-primary">Iniciar Sesión</h3>
-                </div>               
+                </div>
                 <div class="form-floating mb-3">
 
-                    <input type="email" placeholder="correo@correo.com" />
+                    @Html.TextBoxFor(m => m.Email, new { @type = "email", @class = "form-control", placeholder = "Correo" })
                     <label for="floatingInput">Correo Electrónico</label>
                 </div>
                 <div class="form-floating mb-4">
-                    <input type="password" placeholder="Contraseña" />
+                    @Html.TextBoxFor(m => m.Password, new { @type = "password", @class = "form-control", placeholder = "Contraseña" })
                     <label for="floatingPassword">Contraseña</label>
                 </div>
                 <button style="background-color: forestgreen !important" type="submit" class="btn btn-primary py-3 w-100 mb-4">Iniciar Sesión </button>
