--- a/Proyecto Grupo 6/Views/Store/Shop.cshtml
+++ b/Proyecto Grupo 6/Views/Store/Shop.cshtml
@@ -219,7 +219,7 @@
                                 <h5 class="card-title">@item.ProductName</h5>
                                 <p class="card-text">@item.Description</p>
                                 <p class="card-text">₡@item.Price</p>
-                                <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                                <a href="@Url.Action("AgregarArticuloCarrito","Store", new { q = item.ProductId })" class="btn btn-primary">Agregar al carrito</a>
                             </div>
                         </div>
                     </div>
