--- a/Proyecto Grupo 6/Views/Store/Recuperar.cshtml
+++ b/Proyecto Grupo 6/Views/Store/Recuperar.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout - login.cshtml";
 }
 
-@using (Html.BeginForm("RecuperarClave", "Store", FormMethod.Post))
+@using (Html.BeginForm("RecuperarClave", "User", FormMethod.Post))
 {
     <div class="row h-100 align-items-center justify-content-center" style="min-height: 100vh;">
         <div class="col-12 col-sm-8 col-md-6 col-lg-5 col-xl-5">
